--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+sfW0mp8t7DvGr7up3mAkVEEQ3hL9Jt+z2OnY7hyaTo=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+LOGIN_URL=http://usuarios.test/redirect
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +13,23 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=lwproyectos
+DB_DATABASE=proyectos
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=admin
+
+UDB_CONNECTION=mysql
+UDB_HOST=127.0.0.1
+UDB_PORT=3306
+UDB_DATABASE=usuarios
+UDB_USERNAME=root
+UDB_PASSWORD=admin
+
+PDB_CONNECTION=mysql
+PDB_HOST=127.0.0.1
+PDB_PORT=3306
+PDB_DATABASE=personal
+PDB_USERNAME=root
+PDB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
